k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      # 新しい Pod が Ready になってから古い Pod を落とす
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: ghcr.io/danything/blog:da1a926aae455f293c92233f121a522e9e2db2ab
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
